--- a/Mirage/old/testing-range.html
+++ b/Mirage/old/testing-range.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <script type="text/javascript" src="../jquery-3.7.1.min.js"></script>
 <html lang="en">
-<link rel="stylesheet" href="../player-card.css">
+<link rel="stylesheet" href="../draft5/player-card.css">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
