--- a/Mirage/score.html
+++ b/Mirage/score.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Match Countdown</title>
-
   <style>
 
-    @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Spline+Sans+Mono:ital,wght@0,300..700;1,300..700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=SUSE:wght@100..800&family=Spline+Sans+Mono:ital,wght@0,300..700;1,300..700&display=swap');
 
     * {
       margin: 0;
@@ -32,17 +31,17 @@
     }
 
     .nextMatchText {
-      font-family: 'Inter Tight', sans-serif;
+      font-family: 'Inter Tight', sans-serif; /* https://fonts.google.com/specimen/Inter+Tight is weight 0-900, italic 0-1 */
       font-style: normal;
-      font-weight: 900;
+      font-variation-settings: "wght" 900;
       font-size: 18px;
       color: #0077B6;
     }
 
     .nextMatchCounter {
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'SUSE', sans-serif; /* https://fonts.google.com/specimen/SUSE is weight 0-800 */
       font-style: normal;
-      font-weight: 900;
+      font-variation-settings: "wght" 800;
       font-size: 28px;
       color: #FFFFFF;
     }
@@ -64,17 +63,17 @@
     }
 
     .nextMatchTeamsText {
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Open Sans', sans-serif; /* https://fonts.google.com/specimen/Open+Sans is weight 300-800, italic 0-1 */
       font-style: normal;
-      font-weight: 900;
+      font-variation-settings: "wght" 800;
       font-size: 28px;
       color: #FFFFFF;
     }
 
     .nextMatchVsText {
-      font-family: 'Big Shoulders Display', sans-serif;
+      font-family: 'Big Shoulders Display', sans-serif; /* https://fonts.google.com/specimen/Big+Shoulders+Display is weight 100-900 */
       font-style: normal;
-      font-weight: 900;
+      font-variation-settings: "wght" 900;
       font-size: 18px;
       color: #FFFFFF;
     }
