--- a/Mirage/score.html
+++ b/Mirage/score.html
@@ -210,5 +210,5 @@
     }
 
     // Update the team names every 50ms
-    setInterval(updateTeamsText, 32);
+    //setInterval(updateTeamsText, 32);
   </script>
