STATE CHANGESSS YEAHHHHH

--- a/Mirage/score.html
+++ b/Mirage/score.html
@@ -219,7 +219,7 @@
     CustomEase.create("hop","M0,0 C0.5,0 0.5,0 0.5,0.5 0.5,1 0.5,1 1,1")
 
     const transitionDefault = {
-      duration: .5,
+      duration: 1,
       ease: "hop",
       absolute: true,
       onComplete: console.log("yup"),
@@ -310,5 +310,5 @@
       console.log("Changetwo");
     }
 
-    setInterval(changetwo, 500);
+    setInterval(changetwo, 1000);
   </script>
